--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "babel-runtime": "^6.26.0",
     "faker": "^4.1.0",
     "lodash": "^4.17.4",
-    "meteor-node-stubs": "^0.3.2"
+    "meteor-node-stubs": "^0.3.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-mounter": "^1.2.0"
   }
 }
